--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,9 @@
         "laravel/framework": "^9.26.1",
         "laravel/tinker": "^2.7",
         "laravelcollective/html": "^6.1",
+        "league/flysystem-aws-s3-v3": "^3.0",
         "realrashid/sweet-alert": "^7.0",
+        "spatie/laravel-medialibrary": "^10.0.0",
         "spatie/laravel-permission": "^5.7",
         "stancl/tenancy": "*",
         "yajra/laravel-datatables": "^9.0"
